# codex-skills-manager

./: AGENTS.md  README.md  bash_aliases.example  change-log.md  pyproject.toml  skill_aliases.example
docs/: packaging-and-install.md  user-manual.md
docs/superpowers/plans/: 2026-04-28-skills-cli-implementation.md  2026-06-11-managed-skill-directories.md
docs/superpowers/specs/: 2026-04-28-skills-cli-design.md  2026-06-11-managed-skill-directories-design.md
src/codex_skills_cli/: aliases.py  cli.py  discovery.py  interactive.py  managed_dirs.py  models.py  operations.py  paths.py  shell.py
tests/: conftest.py  test_aliases.py  test_cli.py  test_discovery.py  test_interactive.py  test_managed_dirs.py  test_operations.py  test_paths.py  test_shell.py
