[project]
name = "codex-skills-cli"
version = "0.1.0"
description = "Manage external Codex skills and aliases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.0.1",
    "rich>=13.7.0",
    "typer>=0.12.3",
]

[project.scripts]
skills = "codex_skills_cli.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
